--- a/src/static/css/homepage.css
+++ b/src/static/css/homepage.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     outline: none;
     border: none;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     overflow-x: hidden;
@@ -26,6 +27,9 @@ body{
     height: 5rem;
     box-shadow: 2px 2px 4px rgb(228, 228, 228);
     position: absolute;
+    padding: 0 4rem;
+    display: flex;
+    align-items: center;
 }
 .sidebar-main{
     height: calc(100vh - 5rem);
@@ -35,8 +39,19 @@ body{
     box-shadow: 2px 2px 4px rgb(228, 228, 228);
     margin-top: 5rem;
 }
+.nav-icon{
+    height: 2.375rem;
+    width: auto;
 
-
+}.nav-title{
+    font-size: 1.25rem;
+    text-shadow: 2px 2px 2px rgb(220, 220, 220);
+    padding-left: 1rem;
+}
+.icon-title{
+    display: flex;
+    align-items: center;
+}
 
 /* body */
 .body-main{
