--- a/src/static/css/comments.css
+++ b/src/static/css/comments.css
@@ -22,17 +22,19 @@
 .thumbnail{
     width: 100%;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
 
 .thumbnail img{
     margin-top: 4rem;
-    width: 30%;
-    border-radius: 10px;
+    width: 40%;
+    border-radius: 8px;
     display: block;
 }
 
-.thumbnail h3{
-    display: block;
+.vide-title{
+    font-weight: bold;
 }
