--- a/src/static/css/homepage.css
+++ b/src/static/css/homepage.css
@@ -27,9 +27,10 @@ body{
     height: 5rem;
     box-shadow: 2px 2px 4px rgb(228, 228, 228);
     position: absolute;
-    padding: 0 4rem;
-    display: flex;
+    padding: 0 1rem;
+    display: grid;
     align-items: center;
+    grid-template-columns: 3fr 5fr .5fr;
 }
 .sidebar-main{
     height: calc(100vh - 5rem);
@@ -38,13 +39,34 @@ body{
     background-color: white;
     box-shadow: 2px 2px 4px rgb(228, 228, 228);
     margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* padding-top: 1rem; */
+}
+.sidebar-main div span{
+    padding-top: 2rem;
+    font-size: 2rem;text-shadow: 2px 2px 2px rgb(225, 225, 225);
+}
+.sidebar-main div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.sidebar-main div h6{
+    text-align: center;
+}
+.sidebar-main div:hover{
+    color: #1a73e8 ;
+    cursor: pointer;
+    
 }
 .nav-icon{
-    height: 2.375rem;
+    height: 3rem;
     width: auto;
 
 }.nav-title{
-    font-size: 1.25rem;
+    font-size: 25px;
     text-shadow: 2px 2px 2px rgb(220, 220, 220);
     padding-left: 1rem;
 }
@@ -52,7 +74,21 @@ body{
     display: flex;
     align-items: center;
 }
-
+.nav-routes{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 2rem;
+}.nav-routes div{
+    padding-right: 2rem;
+    font-weight: 550;
+    text-shadow: 2px 2px 2px rgb(231, 231, 231);
+    cursor: pointer;
+}
+.nav-routes div:hover{
+    font-weight: 600;
+   
+}
 /* body */
 .body-main{
     height: calc(100vh - 5rem);
