--- a/src/static/css/homepage.css
+++ b/src/static/css/homepage.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     outline: none;
     border: none;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     overflow-x: hidden;
