--- a/src/static/css/comments.css
+++ b/src/static/css/comments.css
@@ -48,7 +48,7 @@
 
 .right{
     margin-top: 3rem;
-    width: 40%;
+    width: 35%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -88,11 +88,12 @@
     font-size: 1.5rem;
 }
 
-.comments-section{
+.comments-section, .sort{
     width: 100%;
+    margin: .625rem 0rem .625rem 0rem;
 }
 
-.comments-section input{
+.search{
     width: 90%;
     height: 3.5rem;
     display: flex;
@@ -100,10 +101,67 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    border-radius: 8px;
+    border-radius: .4rem;
     margin: .9375rem 0rem .9375rem 0rem;
     font-size: 20px;
     border-color: #334652;
-    box-shadow: 0 2px 5px rgb(0 0 0 / 0.2);
+    box-shadow: 0 .125rem .3125rem rgb(0 0 0 / 0.2);
     padding: 1.5rem;
+}
+
+.sort-label{
+    font-size: 1.3rem;
+}
+
+.sort{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: .1125rem solid #738088;
+    padding-bottom: 20px;
+}
+
+#select{
+    width: 11.875rem;
+    height: 1.875rem;
+    padding: .3125rem;
+    border-radius: .2rem;
+    box-shadow: 0 .125rem .3125rem rgb(0 0 0 / 0.2);
+    font-size: 1.1rem;
+    margin-left: .625rem;
+}
+
+.comments-section{
+    width: 100%;
+    height: 50%;
+    border-color: #334652;
+    box-shadow: 0 1.5px 3px rgb(0 0 0 / 0.2);
+    border-radius: .3125rem;
+    padding: .625rem .9375rem .625rem .9375rem;
+    background-color: white;
+}
+
+.comments{
+    width: 100%;
+    margin: 1.5625rem .3125rem 1.5625rem .3125rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.comments img{
+    width: 50px;
+    border-radius: 100%;
+    margin: .5rem
+}
+
+.name{
+    font-weight: bold;
+    margin-right: 8px;
+}
+
+.text{
+    display: block;
+    position: relative;
+    top: .625rem;
 }
